# StaffDemo

./: CMakeLists.txt  Graphics.h  MainMenu.cpp  MainMenu.h  Main_Menu.cpp  README.md  main.cpp  specification.md
CustomLib/: Functions.cpp  Functions.h  Generators.cpp  Generators.h  StaffExceptions.cpp  StaffExceptions.h  TextEdit.cpp  TextEdit.h  TranslationManager.cpp  TranslationManager.h
Data_local/: Staff_Data.csv  dump1.txt  langs.json  logger.ini  newLangs.json  themes.json
Google_Tests/: CMakeLists.txt  GoogleTests.cpp  GoogleTests.h
Headers/: Employee.h  Engineer.h  Factory.h  Interfaces.h  Manager.h  Personal.h
JSON/: Staff_Data.csv  langs.json  newLangs.json
Sources/: Employee.cpp  Engineer.cpp  Factory.cpp  Interfaces.cpp  Manager.cpp  Personal.cpp
TUI/: TUI.cpp  TUI.h  _TUI.h
TUI_FTXUI/: TUI.cpp  TUI.h
TUI_old/: _TUI.cpp  _TUI.h
_TUI_old/: _TUI.h
include/Data/: FileChecking.cpp  FileChecking.h  ThemeStorageProvider.cpp  ThemeStorageProvider.h  TranslationStorageProvider.cpp  TranslationStorageProvider.h
include/Data/CSV/: CSVProjectRepository.h  CSVSPStorageProvider.h  CSVStaffRepository.h
include/core/: AppSetting.h  CSVProjectRepository.h  CSVSPStorageProvider.h  CSVStaffRepository.h  InfoTypeENUM.h  RepositoryInstruments.cpp  RepositoryInstruments.h  ScreensENUM.h  Signal.cpp  Signal.h  Signal2.h  Theme.h  ThemeManager.h  TranslationManager.h  Usages.h
include/data/CSV/: CSVProjectRepository.h  CSVSPStorageProvider.h  CSVStaffRepository.h
include/interaface/: IProjectRepository.h  ISPStorageProvider.h  IStaffRepository.h  IStaffStorageProvider.h
include/interface/: IProjectRepository.h  ISPStorageProvider.h  IStaffRepository.h
include/staff/: Employee.h  Engineer.h  Factory.h  IEmployee.h  Manager.h  Personal.h  StaffInterfaces.h  employee_temp.h  staff_enum.h
include/ui/: AppSetting.h  ScreenManager.h  UserInterface.h  enumScreen.h
include/ui/Model/: loadEmployeeLogModel.cpp  loadEmployeeLogModel.h
include/ui/View/: BaseScreenView.cpp  BaseScreenView.h  BasicView.cpp  BasicView.h  EmployeeLoadScreenAutoView.cpp  EmployeeLoadScreenAutoView.h  LoadEmployeeView.cpp  LoadEmployeeView.h  StartScreenView.cpp  StartScreenView.h  ViewBase.h
include/ui/View/BaseScreenSubViews/: BaseSubScreenView.cpp  BaseSubScreenView.h  SettingsSubView.cpp  SettingsSubView.h
include/ui/ViewModel/: BaseScreenViewModel.cpp  BaseScreenViewModel.h  BasicViewModel.cpp  BasicViewModel.h  EmployeeLoadScreenAutoViewModel.cpp  EmployeeLoadScreenAutoViewModel.h  LoadEmployeeViewModel.cpp  LoadEmployeeViewModel.h  StartScreenViewModel.cpp  StartScreenViewModel.h  ViewModelBase.h
include/ui/ViewModel/BaseScreenSubViewModel/: BaseSubScreenViewModel.h  SettingsSubViewModel.cpp  SettingsSubViewModel.h
include/ui/buisnessLayer/: FieldStrategy.cpp  FieldStrategy.h
include/ui/components/: window_header.h
include/ui/screens/: start_screen.h
include/utils/: FileTimeStamp.h  Functions.h  Logger.h  Split.h  StaffExceptions.h  TranslationManager.h  json.hpp
src/Data/: CMakeLists.txt  FileChecking.cpp  ThemeStorageProvider.cpp  TranslationStorageProvider.cpp
src/Data/CSV/: CSVProjectRepository.cpp  CSVSPStorageProvider.cpp  CSVStaffRepository.cpp
src/core/: CMakeLists.txt  CSVProjectRepository.cpp  CSVSPStorageProvider.cpp  CSVStaffRepository.cpp  RepositoryInstruments.cpp  ThemeManager.cpp  TranslationManager.cpp
src/interface/: CMakeLists.txt  IProjectRepository.cpp  IStaffRepository.cpp
src/staff/: CMakeLists.txt  Employee.cpp  Engineer.cpp  Factory.cpp  Interfaces.cpp  Manager.cpp  Personal.cpp
src/ui/: CMakeLists.txt  ScreenManager.cpp  UserInterface.cpp
src/ui/Model/: loadEmployeeLogModel.cpp
src/ui/View/: BaseScreenView.cpp  BasicView.cpp  EmployeeLoadScreenAutoView.cpp  StartScreenView.cpp  ViewBase.cpp
src/ui/View/BaseScreenSubViews/: SettingsSubView.cpp
src/ui/ViewModel/: BaseScreenViewModel.cpp  BasicViewModel.cpp  EmployeeLoadScreenAutoViewModel.cpp  StartScreenViewModel.cpp  ViewModelBase.cpp
src/ui/ViewModel/BaseScreenSubViewModels/: BaseSubScreenViewModel.cpp  SettingsSubViewModel.cpp
src/ui/components/: window_header.cpp
src/ui/screens/: start_screen.cpp
src/utils/: CMakeLists.txt  Functions.cpp  Logger.cpp  Split.cpp  StaffExceptions.cpp  TranslationManager.cpp
ui/: MainWindow.cpp  MainWindow.h  MainWindow.ui
